--- a/force-app/main/default/classes/AccountHandler.cls
+++ b/force-app/main/default/classes/AccountHandler.cls
@@ -12,7 +12,7 @@ public with sharing class AccountHandler {
         if (opps.size() > 0) {
             insert opps;
 
-            System.debug('Hello');
+            System.debug('Hello!!!');
         }
     }
 }
