--- a/force-app/main/default/classes/AccountHandler.cls
+++ b/force-app/main/default/classes/AccountHandler.cls
@@ -11,6 +11,8 @@ public with sharing class AccountHandler {
         }
         if (opps.size() > 0) {
             insert opps;
+
+            // hello world
         }
     }
 }
