--- a/force-app/main/default/classes/AccountHandler.cls
+++ b/force-app/main/default/classes/AccountHandler.cls
@@ -1,6 +1,6 @@
 public with sharing class AccountHandler {
     public static void CreateNewOpportunity() {
        
-        throw new DmlException('!!!!!!!!!!!');
+        //throw new DmlException('!!!!!!!!!!!');
     }
 }
